--- a/Native C++/GED - ASN01.vcxproj.filters
+++ b/Native C++/GED - ASN01.vcxproj.filters
@@ -21,12 +21,18 @@
     <ClCompile Include="GED - ASN01.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="FileSystem.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="PluginSettings.h">
-      <Filter>Source Files</Filter>
-    </ClInclude>
     <ClInclude Include="Wrapper.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="FileSystem.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="PluginSettings.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
